Fixed alignment issues

--- a/less/sb-admin-2.less
+++ b/less/sb-admin-2.less
@@ -521,6 +521,26 @@ table.dataTable thead .sorting:after {
 #addPaymentRow {
     margin-top: 25px;
 }
+@media (min-width: 1200px) {
+    .col-lg-1-5 {
+      width: 12.5%;
+    }
+}
+.increaseWidth {
+    min-width: 175px;
+}
+
+.form-control-static.inlineBlock {
+    display: inline-block;
+}
+
+.voucherHeader {
+    border-bottom: black solid 2px;
+}
+
+.voucherText {
+    font-size: 10px;
+}
 
 /*--------START MASK--------------*/
 .mask {
@@ -625,23 +645,6 @@ table.dataTable thead .sorting:after {
 }
 
 /*----------END MASK--------------*/
-
-.increaseWidth {
-    min-width: 175px;
-}
-
-.form-control-static.inlineBlock {
-  display: inline-block;
-}
-
-.voucherHeader {
-  border-bottom: black solid 2px;
-}
-
-.voucherText {
-  font-size: 10px;
-}
-
 /*--------------END CUSTOM CSS---------------------*/
 
 @media(max-width:767px) {
